[PATCH] USB: add wake-up for waitqueues in usbfs_remove_file() to fix bug 387

Description: Bug 387 (http://bugzilla.kernel.org/show_bug.cgi?id=387)
is fixed by the attached patch, which sends waitqueue wake-ups to all
the appropriate wait-queue entries when a device is removed from
the system.

Signed-off-by: Nishanth Aravamudan <nacc@us.ibm.com>
Signed-off-by: Greg Kroah-Hartman <greg@kroah.com>